🛠️  fix: layout issues on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,9 @@ body{
 
 
 .blockBlack{
+    padding: 100%;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     z-index: -3;
     opacity: 0;
@@ -59,7 +60,9 @@ body{
 
 .obDiv{
     margin-top: 10px;
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
+    min-width: 320px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -160,7 +163,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 260px;
+    max-width: 260px;
     height: 120px;
     top: 50%;
     left: 50%;
@@ -169,8 +172,14 @@ main{
     border-radius: 20px;
     cursor:default;
     transition: 0.1s;
-    font-size: 0.8rem;
+    padding: 10px;
 }
+
+.scale-up-center>span{
+    font-size: clamp(0.1rem, 1.5vw, 1rem);
+
+}
+
 @keyframes scale-up-center {
     0% {
       transform:translate(-50%, -50%) scale(1);
@@ -193,12 +202,20 @@ main{
     justify-content: center;
     flex-direction: column;
     position: relative;
-    width: 170px;
-    height: 67px;
+    width: 100%;
+    max-width: 260px;
+    min-width: 120px;
+    height: 100%;
+    max-height: 170px;
+    min-height: 60px;
     perspective: 1000px;
     border-radius: 6px;
     padding: 5px;
     font-size: 0.6rem;
+}
+
+.Answer1{
+    margin-top: 10px;
 }
 
 .flip-box{
@@ -207,7 +224,10 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    max-width: 160px;
+    min-width: 20px;
+    max-height: 70px;
+    min-height: 30px;
     transform-style: preserve-3d; 
     transition: transform 0.6s ease-in-out;
 }
@@ -217,7 +237,10 @@ main{
 .flip-box .side {
     position: absolute;
     width: 100%;
-    height: 100%;
+    max-width: 160px;
+    min-width: 20px;
+    max-height: 70px;
+    min-height: 30px;
     border-radius: 5px;
     backface-visibility: hidden; 
     display: flex;
@@ -232,7 +255,11 @@ main{
 
 .side img {
     width: 100%;
-    height: 100%;
+    max-width: 160px;
+    min-width: 20px;
+    max-height: 70px;
+    min-height: 30px;
+    /* top: 20px; */
 }
 
 .questButtons{
@@ -256,7 +283,9 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 260px;
+    width: 100%;
+    max-width: 260px;
+    min-width: 120px;
     height: 100px;
     top: 50%;
     left: 50%;
@@ -279,9 +308,7 @@ main{
 
 .nextButton{
     padding: 5px;
-    position: absolute;
     right: 0.2%;
-    margin-top: 10vh;
 }
 
 .nextTheme{
@@ -300,3 +327,39 @@ main{
     height: 62px;
     font-size: 3.5rem;
 }
+
+.backButton{
+    padding: 5px;
+    right: 0.2%;
+}
+
+.backTheme{
+    width: 60px;
+    height: 60px;
+    border-radius: 100px;
+    border: none;
+    transition: 0.2s;
+    font-size: 3.4rem;
+    cursor: pointer;
+}
+.backTheme:hover{
+    right: 0%;
+    transform:scale(1.025);
+    width: 62px;
+    height: 62px;
+    font-size: 3.5rem;
+}
+
+.themeChange{
+    max-width: 1200px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+@media (max-width: 768px) {
+    
+  }
